--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -186,10 +186,11 @@
             <a href="index.html">Acasa</a>
             <a href="destinations.html">Destinatii</a>
             <a href="offers.html">Oferte</a>
-            <a href="Services.html">Services</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
-            <a href="Booking.html">Rezerva acum</a>
+            <a href="Booking.html">Cere Oferta!</a>
             <a href="about.html">Despre noi</a>
+
         </nav>
     </div>
 
@@ -324,7 +325,7 @@
                     <h3>Ziua 13</h3>
                     <p>• Viziteaza templele Budiste uimitoare</p>
                     <p>• Exploreaza palatul regal </p>
-                    <p>• Experimenteaza cel mai luxos mall</p>
+                    <p>• Experimenteaza cel mai luxos mall al Bangkokului</p>
                     <p>• Bucura-te de o cina pe raul <b>Chao Phraya</b></p>
                 </div>
                 <div class="itinerary-card">
@@ -393,7 +394,7 @@
         </section>
         <section id="Booking" class="section">
             <h4>Rezerva-ti experienta chiar acum!</h4>
-            <a href="Booking.html" class="cta-button">Rezerva acum!</a>
+            <a href="Booking.html" class="cta-button">Cere Oferta!</a>
         </section>
     </main>
 
