--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -186,10 +186,11 @@
             <a href="index.html">Acasa</a>
             <a href="destinations.html">Destinatii</a>
             <a href="offers.html">Oferte</a>
-            <a href="Services.html">Services</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
-            <a href="Booking.html">Rezerva acum</a>
+            <a href="Booking.html">Cere Oferta!</a>
             <a href="about.html">Despre noi</a>
+
         </nav>
     </div>
 
@@ -202,23 +203,22 @@
         <section id="reasons" class="section">
             <h2>De ce sa alegi aceasta oferta?</h2>
             <div class="destinations">
-                
-                <div class="destination">
-                    <h3>Pattaya</h3>
-                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
-                </div>
-                <div class="destination">
-                    <h3>Phuket</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
-                </div>
-                <div class="destination">
-                    <h3>Phi Phi</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
-                </div>
                 <div class="destination">
                     <h3>Bangkok</h3>
                     <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
                 </div>
+                <div class="destination">
+                    <h3>Chiang Mai</h3>
+                    <p>Chiang Mai este cunoscut pentru templele sale istorice, munții înconjurători, piețele vibrante și cultura tradițională, fiind un centru turistic și spiritual important.</p>
+                </div>
+                <div class="destination">
+                    <h3>Phuket</h3>
+                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
+                </div>
+                <div class="destination">
+                    <h3>Phi Phi</h3>
+                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                </div>    
             </div>
         </section>
 
@@ -235,11 +235,6 @@
                     <h3>Chiang Mai</h3>
                     <p>Sedere 3 nopti </p>
                 </div>                 
-                <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929999/iStock-1473165467_tjjfil.jpg"Phuket Getaway">
-                    <h3>Krabi</h3>
-                    <p>Sedere 2 nopti </p>
-                </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg"Phi Phi Islands">
                     <h3>Phi Phi Island</h3>
@@ -259,7 +254,7 @@
             <div class="itinerary-cards">
                  <div class="itinerary-card">
                     <h3>Ziua 1</h3>
-                    <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului </p>                    
+                    <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului Chao Phraya </p>                    
                     <p>• Exploreaza strazile pline de distractie ale Bangkokului </p>
                 </div>
                 <div class="itinerary-card">
@@ -282,47 +277,38 @@
                 </div>                            
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• The Monastery of the <b>Lion Buddha</b></p>
-                    <p>• Chiang Mai Heritage at the City Arts & Cultural Museum</p>
-                    <p>• A Garden of Tranquility and Royal Heritage</p>
-                    <p>• Experience a Unique and Immersive Wildlife Adventure After Dark</p>
+                    <p>• Exploreaza <b>Chiang Mai</b></p>
+                    <p>• Experientaza un tur in salbaticie cu ghid</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
-                    <p>• Explore <b>Doi Suthep</b> Spiritual and Natural Beauty</p>
-                    <p>• Unique glimpse into the traditional lifestyle of the <b>Hmong people</b></p>
-                    <p>• Come Taste the Authentic <b>Khao Soi</b> of Chiang Mai</p>
-                    <p>• Shop Central Chiang Mai Best Malls</p>
+                    <p>• Exploreaza muntele <b>Doi Suthep</b> si satele traditionale ale acestuia.</p>
                     
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
                     <p>• <b>Bamboo Rafting</b> in Chiang Mai </p>
-                    <p>• Connect with Thailand <b>Elephant Sanctuary</b></p>
-                    <p>• Climb Grippy Limestone Waterfalls at <b>Sticky Waterfall</b></p>
+                    <p>• Bucura-te de cascade uimitoare: <b>Sticky Waterfall</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 8</h3>
-                    <p>• A Serene <b>Cave Temple</b> Surrounded by Nature</p>
-                    <p>• The Heart of Thai Umbrella Craftsmanship</p>
-                    <p>•⁠ Experience <b>Silkworm Farming</b> and Traditional Silk Weaving⁠⁠</p>                    
-                    <p>• Historic Gate and Gateway to the Best <b>Local Markets</b></p>
+                    <p>• Vizita la <b>Cave Temple</b> invonjurat de natura</p>
+                    <p>• Incearca mestesuguri locale ale zonei</p>
                 </div>                
                 <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• Sosire la <b>Phuket</b></p>
+                    <p>• Sosire in <b>Phuket</b></p>
                     <p>• Exploreaza centrul vechi plin de culori </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
                     <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
-                    <p>• Home to a 60 meter Chedi Housing Buddha Relic</p>
                     <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
                     <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
-                    <p>• Shopping la pietele locale sau la mallurile de lux </p>
+                    <p>• Shopping la pietele locale </p>
                     <p>• Bucura-te de apus si de un <b>fire show</b> pe plaja </p>   
                 </div>
                 <div class="itinerary-card">
@@ -403,7 +389,7 @@
             <a href="customization.html" class="cta-button">Creaza-ti vacanta!</a>
         </section>
         <section id="Booking" class="section">
-            <h4>Rezerva-ti experienta chiar acum!</h4>
+            <h4>Cere oferta chiar acum!</h4>
             <a href="Booking.html" class="cta-button">Rezerva acum!</a>
         </section>
     </main>
