--- a/Vacanta2.html
+++ b/Vacanta2.html
@@ -389,8 +389,8 @@
             <a href="customization.html" class="cta-button">Creaza-ti vacanta!</a>
         </section>
         <section id="Booking" class="section">
-            <h4>Cere oferta chiar acum!</h4>
-            <a href="Booking.html" class="cta-button">Rezerva acum!</a>
+            <h4>Rezerva-ti experienta chiar acum!</h4>
+            <a href="Booking.html" class="cta-button">Cere Oferta!</a>
         </section>
     </main>
 
