--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -186,7 +186,7 @@
             <a href="index.html">Acasa</a>
             <a href="destinations.html">Destinatii</a>
             <a href="offers.html">Oferte</a>
-            <a href="Services.html">Services</a>
+            <a href="Services.html">Servicii</a>
             <a href="contact.html">Contact</a>
             <a href="Booking.html">Rezerva acum</a>
             <a href="about.html">Despre noi</a>
@@ -204,21 +204,22 @@
             <div class="destinations">
                 
                 <div class="destination">
-                    <h3>Pattaya</h3>
-                    <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
+                    <h3>Khao Sok</h3>
+                    <p>Khao Sok este un parc național din sudul Thailandei, cunoscut pentru pădurile tropicale vechi, biodiversitatea sa, lacul Cheow Lan și peisajele spectaculoase de stânci calcaroase și jungle luxuriante.</p>
                 </div>
                 <div class="destination">
                     <h3>Phuket</h3>
-                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                    <p>Phuket este cea mai mare insulă din Thailanda, renumită pentru plajele sale frumoase, viața de noapte vibrantă și stațiunile de lux. Oferă activități variate, de la sporturi acvatice la excursii pe insule înconjurătoare.</p>
                 </div>
                 <div class="destination">
-                    <h3>Phi Phi</h3>
+                    <h3>Khao Lak</h3>
+                    <p>Khao Lak este o destinație populară din Thailanda, situată pe coasta Andaman, renumită pentru plajele sale liniștite, apa cristalină și peisajele naturale spectaculoase. Ideală pentru relaxare și activități acvatice.</p>
+                </div>
+                  <div class="destination">
+                    <h3>Phuket</h3>
                     <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
                 </div>
-                <div class="destination">
-                    <h3>Bangkok</h3>
-                    <p>Bangkok oferă o combinație unică de cultură vibrantă, gastronomie delicioasă, temple impresionante, viață de noapte animată și shopping diversificat.</p>
-                </div>
+
             </div>
         </section>
 
@@ -310,11 +311,11 @@
                     <h3>Ziua 11</h3>
                     <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
                     <p>• Savureaza cina in jungla inconjurat doar de natura </p>
-                    <p>• Visit Vibrant Parades and Colorful Costumes </p>
+                    <p>• Distreaza-te la un carnaval de noapte</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Day 12</h3>
-                    <p>• Enjoy the morning at the beach </p>
+                    <p>• Bucura-te de dimineata la plaja </p>
             </div>
         </section>
         
@@ -377,7 +378,7 @@
         </section>
         <section id="Booking" class="section">
             <h4>Rezerva-ti experienta chiar acum!</h4>
-            <a href="Booking.html" class="cta-button">Rezerva acum!</a>
+            <a href="Booking.html" class="cta-button">Cere Oferta!</a>
         </section>
     </main>
 
