--- a/customization.html
+++ b/customization.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trasia Agency - Personalizeaza-ti propia vacanta!/title>
+    <title>Trasia Agency - Personalizeaza-ti propia vacanta!</title>
     <style>
          body {
             font-family: 'Arial', sans-serif;
