--- a/Vacanta5.html
+++ b/Vacanta5.html
@@ -269,8 +269,8 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
-                    <p>• </p>
-                 
+                    <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului </p>                    
+                    <p>• Exploreaza strazile pline de distractie ale Bangkokului </p> </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
