--- a/Vacanta6.html
+++ b/Vacanta6.html
@@ -275,12 +275,16 @@
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 4</h3>
-                    <p>• </p> 
-                   
+                    <p>• Visit Three head elephant statue</p>
+                    <p>• Visit Golden Mount Temple</p>
+                    <p>• Explore Mahanakhon Skywalk</p> 
+                    <p>• Enjoy Asiatique The Riverfront</p> 
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• </p> 
+                    <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului </p>                    
+                    <p>• Exploreaza strazile pline de distractie ale Bangkokului </p>
+                </div> 
                                 
                  </div>      
                 <div class="itinerary-card">
