--- a/Vacanta6.html
+++ b/Vacanta6.html
@@ -292,7 +292,7 @@
                 </div>  
                 <div class="itinerary-card">
                     <h3>Ziua 7</h3>
-                    <p>• Exploreaza muntele <b>Doi Suthep</b>
+                    <p>• Exploreaza muntele <b>Doi Suthep</b></p>
                     <p>• Satele traditionale ale acestuia</p>
                 </div>
                 <div class="itinerary-card">
