--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -254,83 +254,87 @@
             <div class="itinerary-cards">
                 <div class="itinerary-card">
                     <h3>Ziua 1</h3>
-                    <p>• Relaxare la Hotel </p>
-                    <p>• Cina la Nest Bird cu vedere la plaja </p>
-                    <p>• Exploreaza energia vibranta a faimosului <b>Walking Street</b> </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 2</h3>
-                    <p>• Descopera Maretia <b>Sanctuary of Truth</b> </p>
-                    <p>• Exploreaza stilul international la mall <b>Terminal 21 Pattaya</b> </p>
-                    <p>• Relaxare si revitalizare cu ajutorul masajului Thailanezesc </p>
-                    <p>• Participa la spectacolul celebru <b>Tiffany Show</b> </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 3</h3>
-                    <p>• Relaxeaza-te intr-un paradis tropical pe <b>Koh Larn</b> </p>
-                    <p>• Incearca sporturi nautice </p>
-                    <p>• Bucura-te de plaje cu nisip fin si ape cristaline </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 4</h3>
-                    <p>• Sosire la Phuket </p>
-                    <p>• Exploreaza centrul vechi plin de culori </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 5</h3>
-                    <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
-                    <p>• Admira prietenii giganti la sanctuarul elefantilor </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 6</h3>
-                    <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
-                    <p>• Shopping la pietele locale sau la mallurile de lux </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 7</h3>
-                    <p>• Tur cu barca in insulele vecine orasului.</p>
-                    <p>• Snorkeling in apele cristaline </p>
-                    <p>• Bucura-te de apus si de un fire show pe plaja </p>                
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 8</h3>
-                    <p>• Distreaza-te la <b>Andaman Sea Water Park</b> </p>
-                    <p>• Savureaza cina in jungla inconjurat doar de natura. </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Day 9</h3>
-                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
-                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
-                    <p>• Admira <b>Pi Leh Lagoon</b></p>
-                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 10</h3>
-                    <p>• Cafe Phuket ofera mancare traditionala, case autentice si o ferma de lotus </p>
-                    <p>• Distreaza-te la un parc tematic </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 11</h3>
-                    <p>• Descopera piete si magazine locale, si savureaza cina pe malul raului </p>                    
-                    <p>• Exploreaza strazile pline de distractie ale Bangkokului </p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 12</h3>
-                    <p>• Viziteaza cea mai mare piata plutitoare din Bangkok</p>
-                    <p>• Exploreaza si incearca <b>Train Market</b> </p>                   
-                    <p>• Incearca <b>China Town</b> pentru un street food delicios</p>
-                </div>
-                <div class="itinerary-card">
-                    <h3>Ziua 14</h3>
                     <p>• Viziteaza templele Budiste uimitoare</p>
                     <p>• Exploreaza palatul regal </p>
                     <p>• Experimenteaza cel mai luxos mall</p>
                     <p>• Bucura-te de o cina pe raul <b>Chao Phraya</b></p>
                 </div>
                 <div class="itinerary-card">
-                    <h3>Ziua 14</h3>
-                    <p>• Shopping la un mall cu preturi uimitoare</p>
-                </div>            
+                    <h3>Ziua 2</h3>
+                    <p>• Viziteaza cea mai mare piata plutitoare din Bangkok</p>
+                    <p>• Exploreaza si incearca <b>Train Market</b> </p>                   
+                    <p>• Incearca <b>China Town</b> pentru un street food delicios</p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 3</h3>
+                    <p>• Visit <b>Three head elephant</b> statue</p>
+                    <p>• Visit Golden Mount Temple</p>
+                    <p>• Explore <b>Skywalk</b> Bangkok </p> 
+                    <p>• Enjoy Asiatique The Riverfront</p> 
+                </div>
+                 <div class="itinerary-card">
+                    <h3>Ziua 4</h3>
+                    <p>• <b>Ayutthaya</b> one day trip</p>
+                    <p>• Explore Buddha head in tree roots </p>
+                    <p>• Visit Ayutthaya ancient grounds</p>
+                    <p>• Visit Floating Market</p>
+                    <p>• National Museum</p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 5</h3>
+                    <p>• </p>                
+                </div>      
+                <div class="itinerary-card">
+                    <h3>Ziua 6</h3>
+                    <p>• Stay in <b>Floatinghouse River</b> </p>
+                    <p>• ⁠Visit the bridge on River </p>
+                    <p>• ⁠Explore the cave and serene environment </p>
+                </div>  
+                <div class="itinerary-card">
+                    <h3>Ziua 7</h3>
+                    <p>• Explore <b>Erawan National Park</b></p>
+                    <p>• Visit Hellfire Pass </p>
+                    <p>• Relax at the Resort </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 8</h3>
+                    <p>• Train Ride on the <b>Death Railway</b> </p>
+                    <p>• Visit ⁠Krasea Cave </p>
+                    <p>• Explore Tiger cave </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 9</h3>
+                    <p>• One Day Trip To <b>Railay Beach</b></p>
+                    <p>•⁠ Cave of the Princess Goddess Legend</p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 10</h3>
+                    <p>•Viziteaza <b>4 Islands And Hong Islands</b> With Luxury Longtail Boat </p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 11</h3>
+                    <p>• Explorarea naturii si a piscinei naturale  <b>Blue Pool</b> </p>
+                    <p>•⁠ Viziteaza prietenii giganti la Elephant Sanctuary </p>
+                    <p>•⁠ ⁠Exploreaza Piata de noapte</p>
+                </div>
+                <div class="itinerary-card">
+                  <h3>Ziua 12</h3>
+                    <p>• Sosire in <b>Phuket</b></p>
+                    <p>• Exploreaza centrul vechi plin de culori </p>
+                    <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
+                    <p>• Exploreazsa faimoasa strada Bangla Road</p>
+                </div>
+                <div class="itinerary-card">
+                    <h3>Ziua 13</h3>
+                    <p>• Viziteaza frumusetea oferita de insulele <b>Phi Phi</b> </p>
+                    <p>• Descopera uimitoarea <b>Maya Bay</b></p>
+                    <p>• Admira <b>Pi Leh Lagoon</b></p>
+                    <p>• Bucura-te de viata marina din apele cristaline cu ajutorul snorkelingului</p>             
+                </div>
+                <div class="itinerary-card">
+                    <h3>Day 14</h3>
+                    <p>• Termina vacanta cu o dimineata la plaja </p>
+                </div>  
             </div>
         </section>
         
