--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -324,8 +324,10 @@
                 </div>
                 <div class="itinerary-card">
                   <h3>Ziua 13</h3>
-                    <p>• </p>
-                    <p>•
+                    <p>• Relaxeaza-te pe plajele superbe din Phuket</p>
+                    <p>• Enjoy Elephant Santuary</p>
+                    <p>• Visit Promthep Cape </p>
+                    <p>• Bucura-te de apus si de un <b>fire show</b> pe plaja </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 14</h3>
