--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -277,12 +277,14 @@
                     <p>• <b>Ayutthaya</b> one day trip</p>
                     <p>• Explore Buddha head in tree roots </p>
                     <p>• Visit Ayutthaya ancient grounds</p>
-                    <p>• Visit Floating Market</p>
                     <p>• National Museum</p>
+                    <p>• Ayutthaya Night Market</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
-                    <p>• </p>                
+                    <p>• Visit the large reclining Buddha </p>
+                    <p>• Ayutthaya Elephant Palace and Royal Kraal </p>
+                    <p>• Visit Floating Market</p> </p>                
                 </div>      
                 <div class="itinerary-card">
                     <h3>Ziua 6</h3>
