--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -306,20 +306,25 @@
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• </p>
+                    <p>• Interacting with Tigers at Exotic Zoo </p>
+                    <p>• A Huge Buddha Statue </p>
+                    <p>• Visit Toscana Valley </p>
+                    <p>• Best Restaurant with Michelin Guide </p>
                  </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
-                    <p>• </p>
-                    <p>•⁠ </p>
+                    <p>• Khao Yai National Park </p>
+                    <p>•⁠ Most Famous Waterfalls </p>
+                    <p>• Night safari tours in Khao Yai </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
-                    <p>•  </p>
+                    <p>• European countryside village </p>
+                    <p>• Enjoy at Winery </p>
+                    <p>• Sosire in <b>Phuket</b></p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 12</h3>
-                    <p>• Sosire in <b>Phuket</b></p>
                     <p>• Exploreaza centrul vechi plin de culori </p>
                     <p>• Viziteaza faimoasa statuie <b>Big Buddha</b> </p>
                     <p>• Exploreazsa faimoasa strada Bangla Road</p>
