--- a/Vacanta7.html
+++ b/Vacanta7.html
@@ -277,13 +277,13 @@
                     <p>• <b>Ayutthaya</b> one day trip</p>
                     <p>• Explore Buddha head in tree roots </p>
                     <p>• Visit Ayutthaya ancient grounds</p>
-                    <p>• National Museum</p>
+                    <p>• Explore National Museum</p>
                     <p>• Ayutthaya Night Market</p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 5</h3>
                     <p>• Visit the large reclining Buddha </p>
-                    <p>• Ayutthaya Elephant Palace and Royal Kraal </p>
+                    <p>• Ayutthaya <b>Elephant Palace and Royal Kraal</b> </p>
                     <p>• Visit Floating Market</p> </p>                
                 </div>      
                 <div class="itinerary-card">
@@ -306,21 +306,21 @@
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 9</h3>
-                    <p>• Interacting with Tigers at Exotic Zoo </p>
+                    <p>• Interacting with <b>Tigers</b> at Exotic Zoo </p>
                     <p>• A Huge Buddha Statue </p>
                     <p>• Visit Toscana Valley </p>
-                    <p>• Best Restaurant with Michelin Guide </p>
+                    <p>• Best Restaurant with <b>Michelin Guide</b> </p>
                  </div>
                 <div class="itinerary-card">
                     <h3>Ziua 10</h3>
-                    <p>• Khao Yai National Park </p>
+                    <p>• Visit <b>Khao Yai National Park</b> </p>
                     <p>•⁠ Most Famous Waterfalls </p>
                     <p>• Night safari tours in Khao Yai </p>
                 </div>
                 <div class="itinerary-card">
                     <h3>Ziua 11</h3>
                     <p>• European countryside village </p>
-                    <p>• Enjoy at Winery </p>
+                    <p>• Enjoy at <b>Winery</b> </p>
                     <p>• Sosire in <b>Phuket</b></p>
                 </div>
                 <div class="itinerary-card">
