--- a/Booking.html
+++ b/Booking.html
@@ -223,13 +223,15 @@
     <label for="destination">Destinație</label>
     <select id="destination" name="destination" required>
         <option value="">Alege o destinație</option>
-        <option value="Hoenymoon">Luna de miere</option>
-        <option value="Bangkok + Chiang Mai + Chiang Rai (10 zile)">Bangkok + Chiang Mai + Chiang Rai (10 zile)</option>
-        <option value="Bangkok + Phuket + Phi Phi (11 zile)">bangkok + Phuket + Phi Phi (11 zile)</option>
-        <option value="Phuket + Island Hopping (8 zile)">Phuket + Island Hopping (8 zile)</option>
-        <option value="Bangkok + Chiang Mai + Krabi (11 zile)">Bangkok + Chiang Mai + Krabi (11 zile)</option>
-        <option value="Bangkok + pattaya + Phuket + Phi Phi (15 zile)">Bangkok + pattaya + Phuket + Phi Phi (15 zile)</option>
-        <option value="Krabi + Koh Samui = Chiang Mai (12 zile)">Krabi + Koh Samui = Chiang Mai (12 zile)</option>
+        <option value="Luna de miere">Luna de miere</option>
+        <option value="Personalizata">Personalizata</option>
+        <option value="Bangkok - Phuket - Phi Phi - Pattaya ">Bangkok - Phuket - Phi Phi - Pattaya)</option>
+        <option value="Bangkok - Chiang Mai - Phuket - Phi Phi">Bangkok - Chiang Mai - Phuket - Phi Phi</option>
+        <option value="Bangkok - Krabi - Phuket - Phi Phi">Bangkok - Krabi - Phuket - Phi Phi</option>
+        <option value="Khao Sok - Khao Lak - Phuket - Phi Phi">Khao Sok - Khao Lak - Phuket - Phi Phi</option>
+        <option value="Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket">Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket</option>
+        <option value="Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket">Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket</option>
+        <option value="Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi">Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi</option>
     </select>
 
     <label for="guests">Număr de oaspeți</label>
