--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             cursor: pointer;
         }
         .hero {
-            background: url('https://images.unsplash.com/photo-1519451241324-20b4ea2c4220?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center/cover;
+            background: url('https://res-console.cloudinary.com/dpwoqx0xz/thumbnails/v1/image/upload/v1731929849/aVN0b2NrLTE0NjI1MTkzNjNfd3hveGQ3/drilldown') no-repeat center center/cover;
             height: 500px;
             display: flex;
             flex-direction: column;
