--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             cursor: pointer;
         }
         .hero {
-            background: url('https://res-console.cloudinary.com/dpwoqx0xz/thumbnails/v1/image/upload/v1731929849/aVN0b2NrLTE0NjI1MTkzNjNfd3hveGQ3/drilldown') no-repeat center center/cover;
+            background: url('https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg') no-repeat center center/cover;
             height: 500px;
             display: flex;
             flex-direction: column;
