--- a/Booking.html
+++ b/Booking.html
@@ -82,7 +82,7 @@
             cursor: pointer;
         }
         .hero {
-            background: url('https://cdn.pixabay.com/photo/2017/09/02/15/20/thailand-2707555_1280.jpg') no-repeat center center/cover;
+            background: url('https://images.unsplash.com/photo-1519451241324-20b4ea2c4220?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center/cover;
             height: 400px;
             display: flex;
             align-items: center;
