--- a/offers.html
+++ b/offers.html
@@ -227,7 +227,7 @@
             <div class="offer">
                 <img src="https://images.pexels.com/photos/708764/pexels-photo-708764.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket (12 zile)</h3>
-                <p>Bucura-te de 12 zile in Bangkok, Chiang Rai, Chiang Mai, Krabi si Phuket, explorand cultura si peisaje de vis!/p>
+                <p>Bucura-te de 12 zile in Bangkok, Chiang Rai, Chiang Mai, Krabi si Phuket, explorand cultura si peisaje de vis!</p>
                 <a href="Vacanta4.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
