--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
 
         <section class="section">
             <h2>Cine suntem</h2>
-            <p>Fondata de un cuplu format dintr-un Roman si un Thailandez care impart pasiunea pentru calatorie. Totul a inceput ca un hobby, organizand vacante pentru prieteni si familie. Cu timpul, incurajati de susitenerea si feedback-ul pozitiv din partea celor apropiati, am decis sa ducem aceasta pasiune mai departe. Astfel a luat nastere Trasia Agency.</p>
+            <p>Fondata de un cuplu format dintr-un Roman si un Thailandez care impart pasiunea pentru calatorie. Totul a inceput ca un hobby, organizand vacante pentru prieteni si familie. Cu timpul, incurajati de sustinerea si feedback-ul pozitiv din partea celor apropiati, am decis sa ducem aceasta pasiune mai departe. Astfel a luat nastere Trasia Agency.</p>
         </section>
 
         <section class="section">
