--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
             </a>
             <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/2066/PNG/512/instagram_icon_125245.png" alt="Instagram">
+                <img src="https://img.freepik.com/free-psd/social-media-logo-design_23-2151299465.jpg" alt="Instagram">
             </a>
         </div>
     </footer>
