--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
             </a>
             <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
-                <img src="https://img.freepik.com/free-psd/social-media-logo-design_23-2151299465.jpg" alt="Instagram">
+                <img src="https://w7.pngwing.com/pngs/343/766/png-transparent-logo-computer-icons-white-instagram-logo-desktop-wallpaper-spot-color.png" alt="Instagram">
             </a>
         </div>
     </footer>
