--- a/index.html
+++ b/index.html
@@ -452,13 +452,13 @@
         <p>© 2024 Trasia Agency. All rights reserved.</p>
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=61566412341547" target="_blank" class="social-icon">
-                <img src="https://cdn.icon-icons.com/icons2/1/PNG/256/social_facebook_fb_35.png" alt="Facebook">
+                <img src="https://www.svgrepo.com/show/419926/facebook-fb-social-icon.svg" alt="Facebook">
             </a>
             <a href="https://wa.me/+40771410487" target="_blank" class="social-icon">
                 <img src="https://www.svgrepo.com/show/419933/whats-app-whatsapp-whatsapp-icon.svg" alt="WhatsApp">
             </a>
             <a href="https://www.instagram.com/trasia.agency/" target="_blank" class="social-icon">
-                <img src="https://w7.pngwing.com/pngs/343/766/png-transparent-logo-computer-icons-white-instagram-logo-desktop-wallpaper-spot-color.png" alt="Instagram">
+                <img src="https://www.svgrepo.com/show/419930/instagram-socials-social-media-icon.svg" alt="Instagram">
             </a>
         </div>
     </footer>
