--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             </div>
             <div class="testimonial">
                 <p>
-                    <img src="https://i.imgur.com/8hjiNS2.jpeg" alt="Denis" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
+                    <img src="https://i.imgur.com/15fOiXx.jpeg" alt="Denis" style="width: 40px; height: 40px; border-radius: 50%; margin-right: 10px;"> 
                     "Mi-au fost depasite asteptarile cu mult. Thailanda chiar merita vizitata, iar noi o sa ne intoarcem curand cu siguranta! " 
                     <br>- Denisa A.
                 </p>
