--- a/offers.html
+++ b/offers.html
@@ -209,43 +209,43 @@
             <div class="offer">
                 <img src="https://images.pexels.com/photos/1647110/pexels-photo-1647110.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Adventure Tour">
                 <h3>Pattaya - Phuket - Phi Phi - Bangkok (14 zile) </h3>
-                <p>Bucura-te de 14 zile de vis in Pattaya, Phuket, Phi Phi si Bangkok, relaxare, aventura si peisaje spectaculoase!</p>
+                <p>Bucura-te de 14 zile de vis in Pattaya, Phuket, Phi Phi si Bangkok, relaxare, aventura si peisaje spectaculoase</p>
                 <a href="Vacanta1.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.unsplash.com/photo-1698114424118-028873182fe4?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Culinary Tour">
                 <h3>Bangkok - Chiang Mai - Phuket - Phi Phi (14 zile)</h3>
-                <p>Bucura-te de 14 zile de neuitat in Bangkok, Krabi, Phuket si Phi Phi, cu peisaje paradisiace si experiente deosebite!</p>
+                <p>Bucura-te de 14 zile de neuitat in Bangkok, Chiang Mai, Phuket si Phi Phi, cu peisaje paradisiace si experiente deosebite</p>
                 <a href="Vacanta2.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/4394296/pexels-photo-4394296.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Wellness Retreat">
                 <h3>Bangkok - Krabi - Phuket - Phi Phi (14 zile)</h3>
-                <p>Bucura-te de 14 zile de aventura si relaxare in Khao Sok, Khao Lak, Phuket si Phi Phi!</p>
+                <p>Bucura-te de 14 zile de neuitat in Bangkok, Krabi, Phuket si Phi Phi, cu peisaje paradisiace si experiente deosebite</p>
                 <a href="Vacanta3.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/708764/pexels-photo-708764.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Khao Sok - Khao Lak - Phuket - Phi Phi (12 zile)</h3>
-                <p>Bucura-te de 12 zile in Bangkok, Chiang Rai, Chiang Mai, Krabi si Phuket, explorand cultura si peisaje de vis!</p>
+                <p>Bucura-te de 12 zile de aventura si relaxare in Khao Sok, Khao Lak, Phuket si Phi Phi</p>
                 <a href="Vacanta4.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/13099696/pexels-photo-13099696.jpeg" alt="Cultural Experience">
                 <h3>Bangkok - Chiang Rai - Chiang Mai - Krabi - Phuket - Phi Phi (14 zile)</h3>
-                <p>Bucura-te de 14 zile de descoperiri in Bangkok, Ayutthaya, Chiang Mai, Krabi si Phuket, combinand istorie, cultura si plaje de vis!</p>
+                <p>Bucura-te de 14 zile in Bangkok, Chiang Rai, Chiang Mai, Krabi, Phuket si Phi Phi, explorand cultura si peisaje de vis</p>
                 <a href="Vacanta5.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/1154193/pexels-photo-1154193.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
-                <h3>Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket - Phi Phi (12 zile) </h3>
-                <p>Bucura-te de 12 zile de neuitat in Bangkok, Ayutthaya, Kanchanaburi, Khao Yai, Phuket si Phi Phi, cu istorie, natura si plaje spectaculoase!</p>
+                <h3>Bangkok - Ayutthaya - Chiang Mai - Krabi - Phuket - Phi Phi (14 zile) </h3>
+                <p>Bucura-te de 14 zile de descoperiri in Bangkok, Ayutthaya, Chiang Mai, Krabi, Phuket si Phi Phi, combinand istorie, cultura si plaje de vis</p>
                 <a href="Vacanta6.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
                 <img src="https://images.pexels.com/photos/10849935/pexels-photo-10849935.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Cultural Experience">
                 <h3>Bangkok - Ayutthaya - Kanchanaburi - Khao Yai - Phuket - Phi Phi (15 zile) </h3>
-                <p>Descopera peisajele uluitoare din Krabi, relaxeaza-te in Koh Samui, si experimenteaza traditia in Chiang Mai</p>
+                <p>Bucura-te de 15 zile de neuitat in Bangkok, Ayutthaya, Kanchanaburi, Khao Yai, Phuket si Phi Phi, cu istorie, natura si plaje spectaculoase</p>
                 <a href="Vacanta7.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
