--- a/offers.html
+++ b/offers.html
@@ -203,7 +203,7 @@
             <div class="offer">
                 <img src="https://images.pexels.com/photos/1024993/pexels-photo-1024993.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Honeymoon">
                 <h3>Luna de miere</h3>
-                <p>Oferim pachete romantice în cele mai frumoase locații din Thailanda.</p>
+                <p>Oferim pachete romantice în cele mai frumoase locații din Thailanda</p>
                 <a href="honeymoon.html" class="cta-button">Detalii</a>
             </div>
             <div class="offer">
