--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -215,7 +215,10 @@
                     <h3>Phuket</h3>
                     <p>Phuket atrage turiști cu plajele sale idilice, viața de noapte vibrantă, o gamă variată de activități acvatice, restaurante excelente și cultură locală fascinantă.</p>
                 </div>
-                
+                <div class="destination">
+                    <h3>Phi Phi</h3>
+                    <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
+                </div>
                 
             </div>
         </section>
