--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -224,6 +224,7 @@
         
         <section id="offers" class="section">
             <h2>Exclusive Holiday Offers</h2>
+            <div class="destination">
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
                     <h3>Bangkok</h3>
