--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -240,6 +240,11 @@
                     <h3>Phuket</h3>
                     <p>Sedere 6 zile </p>
                 </div>
+                <div class="destination">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
+                    <h3>Phi Phi</h3>
+                    <p>Sedere 1 zi </p>
+                </div>
         </section>
 
         <section id="itinerary" class="section">
