--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -241,7 +241,7 @@
                     <p>Sedere 6 zile </p>
                 </div>
                 <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg"Phi Phi Islands">
                     <h3>Phi Phi</h3>
                     <p>Sedere 1 zi </p>
                 </div>
