--- a/Vacanta1.html
+++ b/Vacanta1.html
@@ -229,12 +229,12 @@
                  <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731834993/iStock-689879464_nayo2f.jpg" alt="Bangkok Tour">
                     <h3>Pattaya</h3>
-                    <p>Sedere 3 nopti </p>
+                    <p>Sedere 4 zile </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
                     <h3>Phuket Escape</h3>
-                    <p>Sedere 7 nopti </p>
+                    <p>Sedere 8 zile </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
@@ -244,7 +244,7 @@
                   <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
                     <h3>Bangkok </h3>
-                    <p>Sedere 3 nopti </p>
+                    <p>Sedere 4 zile </p>
                 </div> 
             </div>
         </section>
