--- a/Vacanta3.html
+++ b/Vacanta3.html
@@ -228,17 +228,17 @@
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
                     <h3>Bangkok</h3>
-                    <p>Sedere 4 zile </p>
+                    <p>Sedere 3 nopti </p>
                 </div> 
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731837122/iStock-1128965769-2_pwcjc5.jpg" alt="Phi Phi Islands">
                     <h3>Krabi</h3>
-                    <p>Sedere 4 zile </p>
+                    <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833320/iStock-1491859203_ry1lbb.jpg" alt="Phuket Getaway">
                     <h3>Phuket</h3>
-                    <p>Sedere 6 zile </p>
+                    <p>Sedere 5 nopti </p>
                 </div>
                 <div class="destination">
                     <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731929849/iStock-1462519363_wxoxd7.jpg"Phi Phi Islands">
