--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -227,11 +227,11 @@
             <h2>Exclusive Holiday Offers</h2>
             <div class="destinations">
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1736685416/marcin-kalinski-9u-TGFaFPwI-unsplash_hmd4ud.jpg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162709/839_xmmt4c.jpg" alt="Bangkok Tour">
                     <h3>Khao Sok</h3>
                 </div>
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162273/98_cxferb.jpg" alt="Bangkok Tour">
                     <h3>Khao Lak</h3>
                 </div> 
                 <div class="destination">
@@ -265,7 +265,7 @@
                 <div class="itinerary-card">
                     <h3>Ziua 3</h3>
                     <p>• Visit a Nearby Viewpoint or Waterfalls </p>
-                    <p>• Sosire la <b>Khao Sok</b> </p>
+                    <p>• Sosire la <b>Khao Lak</b> </p>
                 </div>
                  <div class="itinerary-card">
                     <h3>Ziua 4</h3>
@@ -275,7 +275,7 @@
                   <div class="itinerary-card">
                     <h3>Ziua 5</h3>
                     <p>• ⁠Take a Day trip to Beautiful Island </p> 
-                    <p>•⁠ <b>Snorkeling or Diving</b>Experience </p>
+                    <p>•⁠ <b>Snorkeling or Diving</b> Experience </p>
                     <p>•⁠ ⁠⁠Explore Fishing Villages </p>                
                   </div>              
                   <div class="itinerary-card">
