--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -231,7 +231,7 @@
                     <h3>Khao Sok</h3>
                 </div>
                  <div class="destination">
-                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739162273/98_cxferb.jpg" alt="Bangkok Tour">
+                    <img src="https://res.cloudinary.com/dpwoqx0xz/image/upload/v1739163344/freepik__adjust__73830_t9vb7t.png" alt="Bangkok Tour">
                     <h3>Khao Lak</h3>
                 </div> 
                 <div class="destination">
