--- a/Vacanta4.html
+++ b/Vacanta4.html
@@ -208,15 +208,15 @@
                     <p>Khao Sok este un parc național din sudul Thailandei, cunoscut pentru pădurile tropicale vechi, biodiversitatea sa, lacul Cheow Lan și peisajele spectaculoase de stânci calcaroase și jungle luxuriante.</p>
                 </div>
                 <div class="destination">
-                    <h3>Phuket</h3>
-                    <p>Phuket este cea mai mare insulă din Thailanda, renumită pentru plajele sale frumoase, viața de noapte vibrantă și stațiunile de lux. Oferă activități variate, de la sporturi acvatice la excursii pe insule înconjurătoare.</p>
-                </div>
-                <div class="destination">
                     <h3>Khao Lak</h3>
                     <p>Khao Lak este o destinație populară din Thailanda, situată pe coasta Andaman, renumită pentru plajele sale liniștite, apa cristalină și peisajele naturale spectaculoase. Ideală pentru relaxare și activități acvatice.</p>
                 </div>
-                  <div class="destination">
+                 <div class="destination">
                     <h3>Phuket</h3>
+                    <p>Phuket este cea mai mare insulă din Thailanda, renumită pentru plajele sale frumoase, viața de noapte vibrantă și stațiunile de lux. Oferă activități variate, de la sporturi acvatice la excursii pe insule înconjurătoare.</p>
+                </div>
+                  <div class="destination">
+                    <h3>Phi Phi</h3>
                     <p>Insulele Phi Phi sunt renumite pentru peisajele spectaculoase, plajele cu nisip alb, ape cristaline, activități de snorkeling și scuba diving, precum și atmosfera relaxată.</p>
                 </div>
 
