--- a/Vacanta5.html
+++ b/Vacanta5.html
@@ -215,7 +215,7 @@
                     <h3>Chiang Mai</h3>
                     <p>Chiang Mai este cunoscut pentru cultura sa bogată, templele antice și munții frumoși, fiind un amestec perfect de tradiție și aventură.</p>
                 </div>
-                div class="destination">
+                <div class="destination">
                     <h3>Krabi</h3>
                     <p>Krabi este celebru pentru plajele sale spectaculoase, stâncile calcaroase, insulele exotice și apa cristalină, fiind o destinație ideală pentru iubitorii de natură și aventură.</p>
                 </div>
